fixed sign in with username, changed log-in screen colours to make text readable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,9 +20,9 @@
   grid-template-rows: 1fr auto;
 }
 
-.screen-content {
-  margin-bottom: 50px;
-}
+// .screen-content {
+//   margin-bottom: 50px;
+// }
 
 // MAPBOX SETTINGS:
 // The Full Map on nooks#index with Popup Pins
